<resources>
    <string name="app_name">GreenHouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Green House</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="arrow_down">Accueil</string>
    <string name="menu_plants">Mes plantes</string>
    <string name="menu_house">Ma serre</string>


    <string name="plant_name">Plant name</string>
    <string name="temperature">temperature</string>
    <string name="descripiton">Description</string>
    <string name="periode">periodes</string>
    <string name="plant_image">plante image</string>


    <string name="name_1">Basilic</string>
    <string name="name_2">Thym</string>
    <string name="name_3">Romarin</string>
    <string name="name_4">Paquerette</string>


    <string name="desc_1">Cette plante est cultivée pour des usages aromatiques, mais aussi médicinaux. En Asie tropicale, le basilic est considéré comme une plante vivace. Dans les climats plus doux, le basilic commun se comporte en annuelle.</string>
    <string name="desc_2">Cette plante est cultivée pour des usages aromatiques, mais aussi médicinaux. En Asie tropicale, le basilic est considéré comme une plante vivace. Dans les climats plus doux, le basilic commun se comporte en annuelle.</string>
    <string name="desc_3">Cette plante est cultivée pour des usages aromatiques, mais aussi médicinaux. En Asie tropicale, le basilic est considéré comme une plante vivace. Dans les climats plus doux, le basilic commun se comporte en annuelle.</string>
    <string name="desc_4">Cette plante est cultivée pour des usages aromatiques, mais aussi médicinaux. En Asie tropicale, le basilic est considéré comme une plante vivace. Dans les climats plus doux, le basilic commun se comporte en annuelle.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>