<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.greenhouse.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_plants"
        android:name="com.example.greenhouse.ui.plants.PlantsFragment"
        android:label="@string/menu_plants"
        tools:layout="@layout/fragment_plants" >
        <action
            android:id="@+id/action_nav_plants_to_addPlantFragment"
            app:destination="@id/addPlantFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_house"
        android:name="com.example.greenhouse.ui.house.HouseFragment"
        android:label="@string/menu_house"
        tools:layout="@layout/fragment_house" />
    <fragment
        android:id="@+id/addPlantFragment"
        android:name="com.example.greenhouse.ui.plants.AddPlantFragment"
        android:label="fragment_add_plant"
        tools:layout="@layout/fragment_add_plant" />
</navigation>